<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.synchronoss.myapplication.viewmodel.WeatherUpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkRed"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Weather Info" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_margin="@dimen/fifteen_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".accountVerification.view.AccountsVerificationActivity">

                <TextView
                    android:id="@+id/city_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/city"
                    android:textColor="@color/outrageousOrange"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/city_label" />

                <ImageView
                    android:id="@+id/divider_first"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/divider"
                    android:layerType="software"
                    android:src="@drawable/dotted_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/city" />


                <TextView
                    android:id="@+id/temperature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/temperature"
                    android:textColor="@color/outrageousOrange"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_first" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_label" />

                <ImageView
                    android:id="@+id/divider_second"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/divider"
                    android:layerType="software"
                    android:src="@drawable/dotted_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature" />

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/pressure"
                    android:textColor="@color/outrageousOrange"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_second" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_label" />

                <ImageView
                    android:id="@+id/divider_third"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/divider"
                    android:layerType="software"
                    android:src="@drawable/dotted_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure" />

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/humidity"
                    android:textColor="@color/outrageousOrange"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_third" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_data"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_label" />

                <ImageView
                    android:id="@+id/divider_fourth"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/divider"
                    android:layerType="software"
                    android:src="@drawable/dotted_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity" />

<!--                <TextView-->
<!--                    android:id="@+id/truck_number_label"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/fifteen_dp"-->
<!--                    android:fontFamily="@font/poppins_medium"-->
<!--                    android:text="@string/city"-->
<!--                    android:textColor="@color/outrageousOrange"-->
<!--                    android:textSize="@dimen/fourteen_sp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <TextView-->
<!--                    android:id="@+id/truck_number"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/five_dp"-->
<!--                    android:fontFamily="@font/poppins_semibold"-->
<!--                    android:text="@string/no_data"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/sixteen_sp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/truck_number_label" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/divider_first"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="5dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:contentDescription="@string/divider"-->
<!--                    android:layerType="software"-->
<!--                    android:src="@drawable/dotted_line"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/truck_number" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:visibility="@{viewModel.isViewLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>